# flash-attention

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.github/workflows/: cibuildwheel.yml
.github/workflows/scripts/: install_torch.sh  prepare_build_environment_linux.sh  prepare_build_environment_windows.sh  prepare_build_environment_windows.sh 
ci/: prepare_build_environment_linux.sh
flash_attn/: __init__.py  flash_attn_interface.py
flash_attn/cute/: dropout.py  flash_bwd.py  flash_bwd_sm100.py  flash_bwd_sm90.py  flash_fwd.py  flash_fwd_sm100.py  flash_fwd_sm120_fp8.py  flash_fwd_sm120_tma.py  flash_fwd_sm90.py  interface.py  philox.py  utils.py
tests/: test_flash_attn.py
tests/cute/: test_dropout_grad_match.py
